@@ -1,3 +1,5 @@
+import shlex
+
 import pytest
 try:
 	import pymongo
@@ -6,10 +8,20 @@ except ImportError:
 
 from . import service
 
+
+def pytest_addoption(parser):
+	parser.addoption('--mongod-parameters',
+		help="Arbitrary arguments to mongod")
+
+
 @pytest.yield_fixture(scope='session')
 def mongodb_instance():
 	if 'pymongo' not in globals():
 		pytest.skip("pymongo not available")
+
+	params_raw = pytest.config.getoption('mongod_parameters') or ''
+	params = shlex.split(params_raw)
+	service.MongoDBInstance.mongod_parameters += tuple(params)
 	try:
 		instance = service.MongoDBInstance()
 		instance.log_root = ''
